# wxconnector4

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_atall.py  test_atall_dry.py  test_download.py  test_merge.py  test_nextnew_detect.py  test_sendfiles.py  test_voice.py  verify_msgactions.py  verify_ocr.py  verify_wxconnector4.py
wxconnector4/: __init__.py  audio.py  exceptions.py  languages.py  logger.py  ocr.py  param.py  wx.py
wxconnector4/msgs/: __init__.py  attr.py  base.py  parse.py  types.py
wxconnector4/ui/: __init__.py  base.py  chatbox.py  component.py  main.py  moment.py  sessionbox.py
wxconnector4/utils/: __init__.py  auth.py  lock.py  uiabase.py
